--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
  /* We are using the 'Roboto' font from Google. This has already been added to your HTML header */
 
-body {
+/*body {
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
 }
-
+*/
 /**
  * Add your custom styles below
  * 
